WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110103
[Soup] Free cookies explicitly in loops instead of using GOwnPtr
https://bugs.webkit.org/show_bug.cgi?id=110103
Summary
[Soup] Free cookies explicitly in loops instead of using GOwnPtr
Chris Dumez
Reported
2013-02-18 04:37:28 PST
We sometimes use GOwnPtr to free the cookies, and sometimes free them manually using soup_cookie_free(). We should make this more consistent and use GOwnPtr as much as possible and this is the preferred pattern.
Attachments
Patch
(2.51 KB, patch)
2013-02-18 04:44 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.49 KB, patch)
2013-02-18 09:35 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-02-18 04:44:03 PST
Created
attachment 188851
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-02-18 05:14:30 PST
I agree with this change, but note that Martin was opposed to it, see the discussion in bug
https://bugs.webkit.org/show_bug.cgi?id=82082
.
Chris Dumez
Comment 3
2013-02-18 05:18:22 PST
(In reply to
comment #2
)
> I agree with this change, but note that Martin was opposed to it, see the discussion in bug
https://bugs.webkit.org/show_bug.cgi?id=82082
.
Ok, clearing commit flag for now then. I assumed this was fine because GOwnPtr is already used this way in getRawCookies() and deleteCookie(). We should be consistent (either way). We have 2 functions uses GOwnPtr and 2 using soup_cookie_free(). I'll wait for Martin to comment on this.
Chris Dumez
Comment 4
2013-02-18 09:27:53 PST
Comment on
attachment 188851
[details]
Patch Based on IRC discussion with Martin Robinson, I'll upload a patch harmonizing the other way around (freeing explicitly).
Chris Dumez
Comment 5
2013-02-18 09:35:02 PST
Created
attachment 188908
[details]
Patch
WebKit Review Bot
Comment 6
2013-02-18 11:03:04 PST
Comment on
attachment 188908
[details]
Patch Clearing flags on attachment: 188908 Committed
r143243
: <
http://trac.webkit.org/changeset/143243
>
WebKit Review Bot
Comment 7
2013-02-18 11:03:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug