[Soup] Free cookies explicitly in loops instead of using GOwnPtr https://bugs.webkit.org/show_bug.cgi?id=110103

Reviewed by Martin Robinson.

Free cookies explicitly in loops instead of using GOwnPtr for this.
Until now, the code was mixing both styles. This patch makes the
code consistent one way. Adopting list items with GOwnPtr for the
sole purpose to free them makes the freeing less obvious and may
lead to mistakes if someone refactors the code and calls "break;"
to abort loop iteration.

No new tests, no behavior change.

* platform/network/soup/CookieJarSoup.cpp:
(WebCore::getRawCookies):
(WebCore::deleteCookie):
(WebCore::getHostnamesWithCookies):


Canonical link: https://commits.webkit.org/128441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143243 268f45cc-cd09-0410-ab3c-d52691b4dbfc