Source/WebCore/platform/network/soup/CookieJarSoup.cpp
@@ -148,10 +148,11 @@ bool getRawCookies(const NetworkStorageSession& session, const KURL& /*firstPart
         return false;
 
     for (GSList* iter = cookies.get(); iter; iter = g_slist_next(iter)) {
-        GOwnPtr<SoupCookie> cookie(static_cast<SoupCookie*>(iter->data));
+        SoupCookie* cookie = static_cast<SoupCookie*>(iter->data);
         rawCookies.append(Cookie(String::fromUTF8(cookie->name), String::fromUTF8(cookie->value), String::fromUTF8(cookie->domain),
                                  String::fromUTF8(cookie->path), static_cast<double>(soup_date_to_time_t(cookie->expires)) * 1000,
                                  cookie->http_only, cookie->secure, soup_cookie_jar_is_persistent(jar)));
+        soup_cookie_free(cookie);
     }
 
     return true;
@@ -171,11 +172,12 @@ void deleteCookie(const NetworkStorageSession& session, const KURL& url, const S
     CString cookieName = name.utf8();
     bool wasDeleted = false;
     for (GSList* iter = cookies.get(); iter; iter = g_slist_next(iter)) {
-        GOwnPtr<SoupCookie> cookie(static_cast<SoupCookie*>(iter->data));
+        SoupCookie* cookie = static_cast<SoupCookie*>(iter->data);
         if (!wasDeleted && cookieName == cookie->name) {
-            soup_cookie_jar_delete_cookie(jar, cookie.get());
+            soup_cookie_jar_delete_cookie(jar, cookie);
             wasDeleted = true;
         }
+        soup_cookie_free(cookie);
     }
 }
 
@@ -184,10 +186,10 @@ void getHostnamesWithCookies(const NetworkStorageSession& session, HashSet<Strin
     SoupCookieJar* cookieJar = cookieJarForSession(session);
     GOwnPtr<GSList> cookies(soup_cookie_jar_all_cookies(cookieJar));
     for (GSList* item = cookies.get(); item; item = g_slist_next(item)) {
-        GOwnPtr<SoupCookie> cookie(static_cast<SoupCookie*>(item->data));
-        if (!cookie->domain)
-            continue;
-        hostnames.add(String::fromUTF8(cookie->domain));
+        SoupCookie* cookie = static_cast<SoupCookie*>(item->data);
+        if (cookie->domain)
+            hostnames.add(String::fromUTF8(cookie->domain));
+        soup_cookie_free(cookie);
     }
 }
 
